--- a/test.ui
+++ b/test.ui
@@ -6,26 +6,41 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>710</width>
-    <height>591</height>
+    <width>801</width>
+    <height>648</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableCom">
+   <widget class="QTableWidget" name="Main_Table">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>290</y>
-      <width>401</width>
-      <height>192</height>
+      <x>30</x>
+      <y>150</y>
+      <width>691</width>
+      <height>381</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>200</width>
+      <height>200</height>
+     </size>
     </property>
     <row>
      <property name="text">
-      <string/>
+      <string>1</string>
      </property>
     </row>
     <column>
@@ -43,17 +58,12 @@
       <string>Результат</string>
      </property>
     </column>
-    <item row="0" column="0">
-     <property name="text">
-      <string>sdsdas</string>
-     </property>
-    </item>
    </widget>
    <widget class="QPushButton" name="Add_Tab_Button">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>100</y>
+      <x>380</x>
+      <y>110</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -62,13 +72,26 @@
      <string>PushButton</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="New_Row">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>40</y>
+      <width>121</width>
+      <height>91</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>New column</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>710</width>
+     <width>801</width>
      <height>22</height>
     </rect>
    </property>
