--- a/test.ui
+++ b/test.ui
@@ -20,10 +20,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>20</x>
       <y>150</y>
-      <width>691</width>
-      <height>381</height>
+      <width>761</width>
+      <height>411</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -59,31 +59,41 @@
      </property>
     </column>
    </widget>
-   <widget class="QPushButton" name="Add_Tab_Button">
+   <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>110</y>
-      <width>75</width>
-      <height>23</height>
+      <x>40</x>
+      <y>50</y>
+      <width>741</width>
+      <height>80</height>
      </rect>
     </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="New_Row">
-    <property name="geometry">
-     <rect>
-      <x>550</x>
-      <y>40</y>
-      <width>121</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>New column</string>
-    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QTextEdit" name="textEdit"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>PushButton</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Remove_Row">
+       <property name="text">
+        <string>Remove row</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="New_Row">
+       <property name="text">
+        <string>New column</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
