--- a/test.ui
+++ b/test.ui
@@ -21,7 +21,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>150</y>
+      <y>100</y>
       <width>761</width>
       <height>411</height>
      </rect>
@@ -78,14 +78,23 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>50</y>
+      <y>10</y>
       <width>761</width>
       <height>80</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QTextEdit" name="Team_Search"/>
+      <widget class="QLabel" name="Team_Name_Text">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Не выбрана</string>
+       </property>
+      </widget>
      </item>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -128,19 +137,6 @@
      </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="Team_Name_Text">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>761</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Не выбрана</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -148,7 +144,7 @@
      <x>0</x>
      <y>0</y>
      <width>801</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
