--- a/test.ui
+++ b/test.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>801</width>
-    <height>615</height>
+    <width>830</width>
+    <height>771</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -187,9 +187,9 @@
    <widget class="QPushButton" name="Update_Table">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>450</x>
       <y>520</y>
-      <width>311</width>
+      <width>331</width>
       <height>41</height>
      </rect>
     </property>
@@ -202,14 +202,34 @@
      <string>Добавить новый учебный год</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="Result_button">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>590</y>
+      <width>221</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Просчитать статистику</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>801</width>
-     <height>21</height>
+     <width>830</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
