--- a/main.ui
+++ b/main.ui
@@ -20,7 +20,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>100</y>
       <width>761</width>
       <height>411</height>
@@ -77,7 +77,7 @@
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>10</y>
       <width>761</width>
       <height>80</height>
@@ -157,14 +157,20 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
-        <widget class="QPushButton" name="New_Row">
+        <widget class="QPushButton" name="New_Row_Button">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Новая строчка</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="Remove_Row">
+        <widget class="QPushButton" name="Remove_Row_Button">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
           <string>Удалить строчку</string>
          </property>
@@ -174,53 +180,61 @@
      </item>
     </layout>
    </widget>
-   <widget class="QComboBox" name="Combo_Box">
+   <widget class="QWidget" name="horizontalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>520</y>
-      <width>271</width>
-      <height>41</height>
+      <width>761</width>
+      <height>80</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QPushButton" name="Update_Table">
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>520</y>
-      <width>331</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Добавить новый учебный год</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="Result_button">
-    <property name="geometry">
-     <rect>
-      <x>510</x>
-      <y>590</y>
-      <width>221</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Просчитать статистику</string>
-    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QComboBox" name="Combo_Box">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Result_Button">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Просчитать статистику</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Update_Table_Button">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Добавить новый учебный год</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -229,7 +243,7 @@
      <x>0</x>
      <y>0</y>
      <width>830</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
